# ml-starter

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
scripts/: train_phase1.py
src/ml_starter/: data.py  pipeline.py  train.py
wandb/: latest-run
wandb/offline-run-20251106_183224-jx4q2oh5/: run-jx4q2oh5.wandb
wandb/offline-run-20251106_183227-uyig2h10/: run-uyig2h10.wandb
wandb/offline-run-20251106_183227-uyig2h10/files/: requirements.txt
wandb/run-20251105_164909-pqamro5y/: run-pqamro5y.wandb
wandb/run-20251105_164909-pqamro5y/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20251106_165654-kt4jw0jw/: run-kt4jw0jw.wandb
wandb/run-20251106_165654-kt4jw0jw/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251106_215122-h0ruyc41/: run-h0ruyc41.wandb
wandb/run-20251106_215122-h0ruyc41/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251106_215125-7um0m03f/: run-7um0m03f.wandb
wandb/run-20251106_215125-7um0m03f/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251106_220650-ihc6mssu/: run-ihc6mssu.wandb
wandb/run-20251106_220650-ihc6mssu/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251106_220654-k4cszm9f/: run-k4cszm9f.wandb
wandb/run-20251106_220654-k4cszm9f/files/: config.yaml  wandb-metadata.json  wandb-summary.json
