[project]
name = "hello-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipykernel>=7.1.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "wandb>=0.22.3",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Lint 규칙: 기본(E,F) + 유용한 몇 가지(UP: 최신문법, B: bugbear, I: import정리)
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # 길이 제한은 black에게 맡김

[tool.ruff.format]
quote-style = "double"   # 따옴표 스타일 통일(선호에 맞춰 조정 가능)

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_starter"]
